ajustes da documentação
